# FFT_nano

./: .env.example  .gitignore  .gitleaks.toml  ACCESSIBILITY_REPORT.md  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CROSS_BROWSER_TEST_REPORT.md  FINAL_VERIFICATION.md  FIXES_IMPLEMENTED.md  GITHUB_VS_MARKETPLACE_ANALYSIS.md  GRID_ALIGNMENT_GUIDE.md  GRID_ALIGNMENT_SUMMARY.md  GRID_BLANK_SPACE_FIX.md  GRID_FIXES_SUMMARY.md  GRID_WASTED_SPACE_FIX.md  GRID_WASTED_SPACE_SUMMARY.md  GROUND_TRUTH.md  HANDOFF.md  HEADER_COLLISION_FIX.md  IMPLEMENTATION_NOTES.md  MISSION_CONTRACT.md  QA_RESPONSIVE_DESIGN_REPORT.md  README.md  REMEDIATION_PLAN.md  REQUIREMENTS.md  RESPONSIVE_AUDIT_REPORT.json  RESPONSIVE_FIXES.md  RESPONSIVE_FIXES_APPLIED.md  RESPONSIVE_FIXES_SUMMARY.md  SOUL.md  SPEC-knowledge-wiki.md  SPEC.md  SUPPORT.md  TESTING_SUMMARY.md  WHITEPAPER_ARCHITECTURE_FACTS.md  architecture-comparison.html  architecture-playground.html  (+27 more)
.desloppify/: config.json  config.json.bak  plan.json  query.json  state-typescript.json.bak
.factory/: init.sh  services.yaml
.venv-desloppify/: pyvenv.cfg
config/: model-catalog.json  runtime.parity.json
container/: Dockerfile  (+1 more)
skills/runtime/kimi-writing/: README.md  SKILL.md  pyproject.toml
skills/runtime/kimi-writing/prompts/: metaprompt.md  system.md
skills/runtime/kimi-writing/prompts/styles/: agriculture.md  business.md  creative.md  marketing.md  technical.md
skills/runtime/kimi-writing/scripts/: domain_analyzer.py  modes.py  write.py
skills/runtime/kimi-writing/tools/: openrouter_client.py
(+574 files in other folders)
